Fix overflow issue

--- a/src/components/CarouselView/index.css
+++ b/src/components/CarouselView/index.css
@@ -27,6 +27,7 @@
   position: relative;
   padding: 20px 50px;
   height: 300px;
+  overflow-x: hidden;
 }
 
 .carouselTitle {
